[tool.poetry]
name = "piccollage_problem2"
version = "0.1.0"
description = "PicCollage interview step 3 problem 2"
authors = ["RainrainWu <s0958334772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
