[tool.poetry]
name = "piccollage_problem2"
version = "0.1.0"
description = "PicCollage interview step 3 problem 2"
authors = ["RainrainWu <s0958334772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
requests = "^2.24.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.3"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
